--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,17 @@
-ROBINHOOD_USERNAME=<your_robinhood_username>
-ROBINHOOD_PASSWORD=<your_robinhood_password>
+# OpenAI
 OPENAI_API_KEY=<your_openai_api_key>
+
+# Email Configuration
 EMAIL_SERVER="smtp.gmail.com"
 EMAIL_PORT=587
 EMAIL_USERNAME=<your_email_username>
 EMAIL_PASSWORD=<your_email_password>
 RECIPIENT_EMAIL=<recipient_email_address>
+
+# SnapTrade
+SNAPTRADE_CLIENT_ID=<your_snaptrade_client_id>
+SNAPTRADE_CONSUMER_KEY=<your_snaptrade_consumer_key>
+SNAPTRADE_USER_ID=<your_snaptrade_user_id>
+
+# Portfolio Provider
+PORTFOLIO_PROVIDER="robinstocks" # or "snaptrade"
