--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,7 @@ RECIPIENT_EMAIL=<recipient_email_address>
 SNAPTRADE_CLIENT_ID=<your_snaptrade_client_id>
 SNAPTRADE_CONSUMER_KEY=<your_snaptrade_consumer_key>
 SNAPTRADE_USER_ID=<your_snaptrade_user_id>
+SNAPTRADE_USER_SECRET=<your_snaptrade_user_secret>
 
 # Portfolio Provider
-PORTFOLIO_PROVIDER="robinstocks" # or "snaptrade"
+PORTFOLIO_PROVIDER="snaptrade"
