--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -25,16 +25,16 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: TradingNewsChecker/requirements.txt
+          cache-dependency-path: requirements.txt
 
       - name: Install dependencies
-        working-directory: TradingNewsChecker
+        # working-directory: TradingNewsChecker
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install --no-cache-dir -r requirements.txt
 
       - name: Run daily report
-        working-directory: TradingNewsChecker
+        # working-directory: TradingNewsChecker
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           SNAPTRADE_CLIENT_ID: ${{ secrets.SNAPTRADE_CLIENT_ID }}
