finished logging, simplified GPT step

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,9 @@ SNAPTRADE_USER_SECRET=<your_snaptrade_user_secret>
 
 # Portfolio Provider
 PORTFOLIO_PROVIDER="snaptrade"
+
+# Logging
+# LOG_LEVEL - numeric or name (DEBUG, INFO, WARNING, ERROR). Example: LOG_LEVEL=DEBUG
+# LOG_FILE - file path for logs (overrides ./logs/trading_news_checker.log)
+LOG_LEVEL=INFO
+LOG_FILE=./logs/trading_news_checker.log
