--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -1,8 +1,8 @@
 name: Daily Portfolio News Report
 
 on:
-  schedule:
-    - cron: "30 13 * * *" # 13:30 UTC daily
+  #schedule:
+    #- cron: "30 13 * * *" # 13:30 UTC daily
   workflow_dispatch: {}
 
 concurrency:
